# voice-assistant

./: .gitignore  CMakeLists.txt
components/audio_input/: CMakeLists.txt  I2SSampler.cpp  I2SSampler.h
components/audio_processor/: CMakeLists.txt
components/neural_network/: CMakeLists.txt
components/neural_network/src/: NeuralNetwork.cpp  NeuralNetwork.h  model.cc
main/: CMakeLists.txt  ble-connect.c  ble-connect.h  http.c  http.h  i2c-lcd.c  i2c-lcd.h  main.c  network-monitor.c  network-monitor.h  server-config.c  server-config.h  server-connect.c  server-connect.h  voice-capture.c  wifi-connect.c  wifi-connect.h  wifi_server_config.c  wifi_server_config.h
src/: CMakeLists.txt  config.h  wake_word_detector.cpp  wake_word_detector.h
src/state_machine/: DetectWakeWordState.cpp
